breakdowns + corrections to some calcs in ch3

--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -23,10 +23,10 @@ Honestly, how do you do that? It's very impressive.
 
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors friends.
 I first met some of you on the literal first day of my undergraduate degree, it's really quite incredible how you've all tolerated my nonsense for so long.
-From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \textit{Super Smash Bros.} all night long on it's release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
+From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \textit{Super Smash Bros.} all night long on its release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
 In particular, those who are still in Leeds, Rob\footnote{\emph{``People can put whatever they want in footnotes, nobody reads them.''} - Dr. Rob Welch}, Matt, Kelsie, Alex and Sam; as well as those who aren't, Martin, Elliot, Caz, Andy, and Devon.
 Congratulations are also in order for Kelsie and Alex on their wedding, you did it you two!
-Thank you all, for filling my life with joy this past decade.
+Thank you, all of you, for filling my life with joy this past decade.
 
 To my partner Pruthvi, I cannot even begin to describe how unlikely it is that the two of us even met.
 Two people finding and falling for each other on the more esoteric circles of the internet is like two particles colliding in the tenuous interstellar medium\ldots{}
@@ -35,10 +35,10 @@ You've been loving, kind, helpful, and the most wonderful partner anyone could a
 I am truly blessed to know you and love you.
 
 I would also like to thank the fantastic team at Leeds' ARC High Performance Computing department, considering the bulk of this work involves many 3D numerical simulations, my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
-I also apologise for running my earlier simulations on the login nodes for multiple days, I swear it was an accident.
+I also apologise for that one time I ran my simulations on the login nodes for multiple days, I swear it was an accident.
 
 I would also like to thank two figures from my formative years for inspiring me.
-The first is my 9\textsuperscript{th} year Physics teacher, Isobel Why, who re-kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
+The first is my 9\ts{th} year Physics teacher, Isobel Why, who re-kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
 She truly had faith in all of her students, and pushed them far beyond what they thought themselves capable of.
 Whilst she left teaching shortly after that year, I will never forget her impact on my life and my work.
 Another is quite indirect, but still important, I would be amiss to thank Winchell ``Nyrath'' Chung, curator of the website \footlink{Atomic Rockets}{http://projectrho.com/public\_html/rocket/}.
