--- a/Thesis.tex
+++ b/Thesis.tex
@@ -239,7 +239,7 @@
 
 \begin{dedication}
   \begin{center}
-    \parbox{0.5\textwidth}{
+    \parbox{0.6\textwidth}{
       \raggedright{
         \emph{
           ``Space is \textbf{big}. Really big. You just won't believe how vastly, hugely, mind-bogglingly big it is. I mean, you may think it's a long way down the road to the chemist's, but that's just peanuts to space.''
@@ -262,7 +262,7 @@
 
 \begin{dedication}
   \begin{center}
-    \parbox{0.5\textwidth}{
+    \parbox{0.6\textwidth}{
       \vspace{1em}
       \raggedright{
         \emph{
@@ -274,10 +274,10 @@
         \rule{\linewidth}{0.5pt}
         \Large
         \MakeUppercase{Me}
-        % \\
-        % \large
-        % \emph{This Thesis}
-        % \par
+        \\
+        \large
+        \emph{Discussing the inclusion of a quote in this thesis}
+        \par
       }
     }
   \end{center}
