Some corrections from friends

--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -26,7 +26,7 @@ I first met some of you on the literal first day of my undergraduate degree, it'
 From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \textit{Super Smash Bros.} all night long on its release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
 In particular, those who are still in Leeds, Rob\footnote{\emph{``People can put whatever they want in footnotes, nobody reads them.''} - Dr. Rob Welch}, Matt, Kelsie, Alex and Sam; as well as those who aren't, Martin, Elliot, Caz, Andy, and Devon.
 Congratulations are also in order for Kelsie and Alex on their wedding, you did it you two!
-Thank you, all of you, for filling my life with joy this past decade.
+Thank you, all of you, for filling my life with joy this past decade\footnote{And for helping to proof-read my thesis, it's a tremendous help.}.
 
 To my partner Pruthvi, I cannot even begin to describe how unlikely it is that the two of us even met.
 Two people finding and falling for each other on the more esoteric circles of the internet is like two particles colliding in the tenuous interstellar medium\ldots{}
