--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -4,7 +4,7 @@
 
 To my Mum, without her help these past 27 years there's no way I would have gotten this far.
 
-I'll pay you back I promise.
+Thank you so much, for everything.
 
 \end{dedication}
 
