--- a/References/library.bib
+++ b/References/library.bib
@@ -987,6 +987,22 @@
   file = {/Users/py13je/Zotero/storage/A5FX96YP/del Palacio et al. - 2021 - The non-thermal emission from the colliding-wind b.pdf}
 }
 
+@article{delpalacioNonthermalEmissionCollidingwind2022,
+  title = {The Non-Thermal Emission from the Colliding-Wind Binary {{Apep}}},
+  author = {{del Palacio}, S. and Benaglia, P. and De Becker, M. and {Bosch-Ramon}, V. and Romero, G. E.},
+  year = {2022},
+  month = jan,
+  journal = {Publications of the Astronomical Society of Australia},
+  volume = {39},
+  pages = {e004},
+  issn = {1323-3580},
+  doi = {10.1017/pasa.2021.60},
+  abstract = {Therecently discovered massive binary system Apep is the most powerful synchrotron emitter among the known Galactic colliding-wind binaries. This makes this particular system of great interest to investigate stellar winds and the non-thermal processes associated with their shocks. This source was detected at various radio bands, and in addition the wind-collision region was resolved by means of very-long baseline interferometric observations. We use a non-thermal emission model for colliding-wind binaries to derive physical properties of this system. The observed morphology in the resolved maps allows us to estimate the system projection angle on the sky to be {$\psi$} {$\approx$} 85\textdegree. The observed radio flux densities also allow us to characterise both the intrinsic synchrotron spectrum of the source and its modifications due to free-free absorption in the stellar winds at low frequencies; from this, we derive mass-loss rates of the stars of \textbackslash dot\{M\}\_WN {$\approx$} 4\texttimes 10\^\{-5\}M\_{$\odot$} yr\^\{-1\} and \textbackslash dot\{M\}\_WC {$\approx$} 2.9\texttimes 10\^\{-5\}M\_{$\odot$} yr\^\{-1\} . Finally, the broadband spectral energy distribution is calculated for different combinations of the remaining free parameters, namely the intensity of the magnetic field and the injected power in non-thermal particles. We show that the degeneracy of these two parameters can be solved with observations in the high-energy domain, most likely in the hard X-rays but also possibly in {$\gamma$} -rays under favourable conditions.},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,outflows,radiation mechanisms: non-thermal,relativistic processes,stars: massive,stars: winds},
+  annotation = {ADS Bibcode: 2022PASA...39....4D},
+  file = {/Users/py13je/Zotero/storage/79KBVCIM/del Palacio et al. - 2022 - The non-thermal emission from the colliding-wind b.pdf}
+}
+
 @article{demarcoAbundancesWCCentral2003,
   title = {Abundances of [{{WC}}] {{Central Stars}} of {{PN}} and the {{Double Dust Chemistry Problem}}},
   author = {De Marco, Orsola},
