--- a/References/library.bib
+++ b/References/library.bib
@@ -3868,6 +3868,12 @@
   file = {/Users/py13je/Zotero/storage/ZDTK2YSU/Shenar et al. - 2019 - The Wolf–Rayet binaries of the nitrogen sequence i.pdf}
 }
 
+@misc{Sonarr,
+  title = {Sonarr},
+  howpublished = {http://192.168.1.71:8989/},
+  file = {/Users/py13je/Zotero/storage/HUKQKJJK/192.168.1.71.html}
+}
+
 @article{soulainSPHEREViewWolfRayet2018,
   title = {{{SPHERE}} View of {{Wolf-Rayet}} 104 - {{Direct}} Detection of the {{Pinwheel}} and the Link with the Nearby Star},
   author = {Soulain, A. and Millour, F. and Lopez, B. and Matter, A. and Lagadec, E. and Carbillet, M. and Camera, A. La and Lamberts, A. and Langlois, M. and Milli, J. and Avenhaus, H. and Magnard, Y. and Roux, A. and Moulin, T. and Carle, M. and Sevin, A. and Martinez, P. and Abe, L. and Ramos, J.},
