minor fixes - Added acknowledgement + dedication - Update to abstract - Added first paper citations

--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -2,7 +2,7 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 
-To my Mum, without her help these past 27 years there's no way I would have gotten this far.
+To my Mum, without her help these past twenty-seven years there's no way I would have gotten this far.
 
 Thank you so much, for everything.
 
