--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -13,7 +13,7 @@ I suppose a good place to start when thanking people in a thesis is to start wit
 To my mum, when I asked you to for help funding my doctoral degree, you said yes, instantly and without hesitation.
 Considering all you have done and sacrificed for me throughout my life, you agreeing to help me was another act of kindness that I can barely repay (trust me, I've done the maths).
 You've been there for me, every step of the way, I could not ask for a more wonderful mum, and I hope I can make you proud.
-Thank you to the rest of my family, in particular my dad, Cress, Olivia, Maddy, Oscar\footnote{And Alf!} and my grandparents.
+Thank you to the rest of my family, in particular my dad, Cress, Olivia, Maddy, Oscar\footnote{And Alf!}, my mum's partner (and soon to be stepdad) Neil, and my grandparents.
 You are the best family anyone could ask for, and thank you for being so supportive.
 
 I also owe a debt to my supervisor, Dr. Julian Pittard, you've gone above and beyond when it came to my supervision.
