--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -1304,6 +1304,21 @@
   file = {/Users/py13je/Zotero/storage/L6B8H2AM/Dyson - 2021 - The physics of the interstellar medium.pdf}
 }
 
+@unpublished{eatsonExplorationDustGrain2022,
+  title = {An Exploration of Dust Grain Growth within {{WCd}} Systems Using an Advected Scalar Dust Model},
+  author = {Eatson, J. W. and Pittard, J. M. and Van Loo, S.},
+  date = {2022-04-15},
+  eprint = {2204.07397},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph},
+  url = {http://arxiv.org/abs/2204.07397},
+  urldate = {2022-04-18},
+  abstract = {Dust production is one of the more curious phenomena observed in massive binary systems with interacting winds. The high temperatures, UV photon flux and violent shocks should destroy any dust grains that condense. However, in some extreme cases dust production yields of approximately 30\% of the total mass loss rate of the stellar winds have been observed. In order to better understand this phenomenon a parameter space exploration was performed using a series of numerical models of dust producing carbon phase Wolf-Rayet (WCd) systems. These models incorporated a passive scalar dust model simulating dust growth, destruction and radiative cooling. We find that reasonable dust yields were produced by these simulations. Significant changes in the dust yield were caused by changing the mass loss rates of the stars, with a greater mass loss rate contributing to increased dust yields. Similarly, a close orbit between the stars also resulted in higher dust yields. Finally, a high velocity wind shear, which induces Kelvin-Helmholtz (KH) instabilities and wind mixing, drastically increases the dust yields.},
+  archiveprefix = {arXiv},
+  keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - Solar and Stellar Astrophysics},
+  file = {/Users/py13je/Zotero/storage/PL2SEL2X/Eatson et al. - 2022 - An exploration of dust grain growth within WCd sys.pdf;/Users/py13je/Zotero/storage/7X6HSZFE/2204.html}
+}
+
 @article{eddingtonInternalConstitutionStars1920,
   title = {The {{Internal Constitution}} of the {{Stars}}},
   author = {Eddington, A. S.},
