Final major draft

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -14,6 +14,7 @@ List of common abbreviations, a section is referenced when applicable. Entries a
   3$\alpha$ & Triple-$\alpha$ & Section \ref{sec:evolvedstars} \\
   AGB & Asymptotic Giant Branch & Section \ref{sec:evolvedstars} \\
   CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) & Section \ref{sec:cak} \\
+  CNO & Carbon Nitrogen Oxygen & Section \ref{sec:fusioncycles} \\ 
   CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
   GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
   GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
@@ -23,6 +24,7 @@ List of common abbreviations, a section is referenced when applicable. Entries a
   MESA & Modules for Experiments in Stellar Astrophysics & Section \ref{sec:evolvedstars} \\
   MIST & MESA Isochrones and Stellar Tracks & Section \ref{sec:evolvedstars} \\
   OB  & O or B type star & Section \ref{sec:obtype} \\ 
+  p-p & Proton-Proton & Section \ref{sec:fusioncycles} \\ 
   PAH & Polycyclic Aromatic Hydrocarbon & Section \ref{sec:dust} \\
   RSG & Red Supergiant & Section \ref{sec:obtype} \\
   WC  & Wolf-Rayet Carbon phase & Section \ref{sec:wrtype} \\
@@ -53,7 +55,7 @@ List of common abbreviations, a section is referenced when applicable. Entries a
 
   CFL  & Courant-Friedrichs-Lewy & Section \ref{sec:numsim} \\
   HLLC & Harten-Lax-van Leer-Contact & Section \ref{sec:numsim} \\
-  RK   & Runge-Kutta & \\
+  RK   & Runge-Kutta & \ref{sec:numerical-math} \\
   TEF & Temporal Evolution Function & Section \ref{sec:othercalc} \\
 
 \end{longtable}
