--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -7,12 +7,10 @@
 \setlength{\parindent}{17.62482pt}
 \setlength{\parskip}{0.0pt plus 1.0pt}
 
-% \textbf{If you're reading this ahead of time and wondering where you are, don't worry, I'm getting to you, just writing the thesis first!}
-
 I suppose a good place to start when thanking people in a thesis is to start with family.
 To my mum, when I asked you for help funding my doctoral degree, you said yes, instantly and without hesitation.
 Considering all you have done and sacrificed for me throughout my life, your agreement to help me was another act of kindness that I can barely repay (trust me, I've done the maths).
-You've been there for me, every step of the way, I could not ask for a more wonderful mum, and I hope I can make you proud.
+You've been there for me every step of the way, I could not ask for a more wonderful mum, and I hope I can make you proud.
 Thank you to the rest of my family, in particular my dad, Cress, Olivia, Maddy, Oscar\footnote{And Alf!}, my mum's partner (and soon to be my stepdad!) Neil, and my grandparents.
 You are the best family anyone could ask for and thank you for being so supportive.
 
@@ -24,7 +22,7 @@ Honestly, how do you do that? It's very impressive!
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors' friends.
 I first met some of you on the literal first day of my undergraduate degree, it's quite incredible how you've all tolerated my nonsense for so long.
 From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \textit{Super Smash Bros.} all night long on its release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
-In particular, those who are still in Leeds, Rob\footnote{\emph{``People can put whatever they want in footnotes, nobody reads them.''} - Dr Rob Welch}, Matt, Kelsie, Alex and Sam; as well as those who aren't, Martin, Elliot, Caz, Andy, John and Devon.
+In particular, those who are still in Leeds, Rob\footnote{\emph{``People can put whatever they want in footnotes, nobody reads them.''} - Dr Rob Welch}, Matt, Kelsie, Alex and Sam; as well as those who aren't: Martin, Elliot, Caz, Andy, John and Devon.
 Congratulations are also in order for Kelsie and Alex on their wedding, you did it you two!
 Thank you, all of you, for filling my life with joy this past decade\footnote{And for helping to proof-read my thesis, it's a tremendous help.}.
 
@@ -34,11 +32,11 @@ If you'll excuse the extremely trite metaphor.
 You've been loving, kind, helpful, and the most wonderful partner anyone could ask for.
 I am truly blessed to know you and love you.
 
-I would also like to thank the fantastic team at Leeds' ARC High-Performance Computing department, considering the bulk of this work involves many 3D numerical simulations, my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
+I would also like to thank the fantastic team at Leeds' ARC High-Performance Computing department, considering the bulk of this thesis involves many 3D numerical simulations, my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
 I also apologise for that one time I ran my simulations on the login nodes for multiple days, I swear it was an accident.
 
 I would also like to thank two figures from my formative years for inspiring me.
-The first is my 9\ts{th} year Physics teacher, Isobel Why, who re-kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
+The first is my 9\ts{th} year Physics teacher, Isobel Why, who kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
 She truly had faith in all of her students and pushed them far beyond what they thought themselves capable of.
 Whilst she left teaching shortly after that year, I will never forget her impact on my life and my work.
 Another is quite indirect, but still important, I would be amiss to thank Winchell ``Nyrath'' Chung, curator of the website \footlink{Atomic Rockets}{http://projectrho.com/public\_html/rocket/}.
