Synced corrections for second paper

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -448,6 +448,13 @@
   file = {/Users/py13je/Zotero/storage/YNBVLYFM/Birnstiel et al. - 2016 - Dust Evolution and the Formation of Planetesimals.pdf}
 }
 
+@online{BirthEnvironmentPlanetary,
+  title = {The Birth Environment of Planetary Systems | {{Royal Society Open Science}}},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsos.201271},
+  urldate = {2022-04-25},
+  file = {/Users/py13je/Zotero/storage/H4LZMHCD/rsos.html}
+}
+
 @book{blandyProgrammingRustFast2021,
   title = {Programming {{Rust}}: {{Fast}}, {{Safe Systems Development}}},
   shorttitle = {Programming {{Rust}}},
@@ -3283,6 +3290,39 @@
   langid = {english},
   keywords = {cache,distributed memory systems,Foster's methodology,instruction level parallelism,interconnection networks,MIMD,shared memory systems,SIMD,SISD,von Neumann architecture},
   file = {/Users/py13je/Zotero/storage/Z9ZY8HJ2/B9780128046050000099.html}
+}
+
+@article{parkerBirthEnvironmentPlanetary,
+  title = {The Birth Environment of Planetary Systems},
+  author = {Parker, Richard J.},
+  journaltitle = {Royal Society Open Science},
+  volume = {7},
+  number = {11},
+  pages = {201271},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsos.201271},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsos.201271},
+  urldate = {2022-04-25},
+  abstract = {Star and planet formation are inextricably linked. In the earliest phases of the collapse of a protostar, a disc forms around the young star and such discs are observed for the first several million years of a star's life. It is within these circumstellar, or protoplanetary, discs that the first stages of planet formation occur. Recent observations from the Atacama large millimetre array (ALMA) suggest that planet formation may already be underway after only 1 Myr of a star's life. However, stars do not form in isolation; they form from the collapse and fragmentation of giant molecular clouds several parsecs in size. This results in young stars forming in groups\textemdash often referred to as `clusters'. In these star-forming regions, the stellar density is much higher than the location of the Sun and other stars in the Galactic disc that host exoplanets. As such, the environment where stars form has the potential to influence the planet formation process. In star-forming regions, protoplanetary discs can be truncated or destroyed by interactions with passing stars, as well as photoevaporation from the radiation fields of very massive stars. Once formed, the planets themselves can have their orbits altered by dynamical encounters\textemdash either directly from passing stars or through secondary effects such as the Kozai\textendash Lidov mechanism. In this contribution, I review the different processes that can affect planet formation and stability in star-forming regions. I discuss each process in light of the typical range of stellar densities observed for star-forming regions. I finish by discussing these effects in the context of theories for the birth environment of the Solar System.},
+  keywords = {extrasolar planets,planet formation,Solar System,star formation},
+  file = {/Users/py13je/Zotero/storage/C9FYBHZ6/Parker - The birth environment of planetary systems.pdf}
+}
+
+@article{parkerBirthEnvironmentPlanetary2020,
+  title = {The Birth Environment of Planetary Systems},
+  author = {Parker, Richard J.},
+  date = {2020-11},
+  journaltitle = {R. Soc. open sci.},
+  volume = {7},
+  number = {11},
+  pages = {201271},
+  issn = {2054-5703},
+  doi = {10.1098/rsos.201271},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsos.201271},
+  urldate = {2022-04-25},
+  abstract = {Star and planet formation are inextricably linked. In the earliest phases of the collapse of a protostar, a disc forms around the young star and such discs are observed for the first several million years of a star's life. It is within these circumstellar, or protoplanetary, discs that the first stages of planet formation occur. Recent observations from the Atacama large millimetre array (ALMA) suggest that planet formation may already be underway after only 1 Myr of a star's life. However, stars do not form in isolation; they form from the collapse and fragmentation of giant molecular clouds several parsecs in size. This results in young stars forming in groups\textemdash often referred to as `clusters'. In these star-forming regions, the stellar density is much higher than the location of the Sun and other stars in the Galactic disc that host exoplanets. As such, the environment where stars form has the potential to influence the planet formation process. In star-forming regions, protoplanetary discs can be truncated or destroyed by interactions with passing stars, as well as photoevaporation from the radiation fields of very massive stars. Once formed, the planets themselves can have their orbits altered by dynamical encounters\textemdash either directly from passing stars or through secondary effects such as the Kozai\textendash Lidov mechanism. In this contribution, I review the different processes that can affect planet formation and stability in star-forming regions. I discuss each process in light of the typical range of stellar densities observed for star-forming regions. I finish by discussing these effects in the context of theories for the birth environment of the Solar System.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/LK4ZNUFG/Parker - 2020 - The birth environment of planetary systems.pdf}
 }
 
 @article{parkin_3d_2008,
